# hamiltonian-flow-maps

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  style.css
configs/: config.yaml  config_ff.yaml  simbench.yaml
configs/data_module/: alanine_dipeptide.yaml  fane_aspirin.yaml  fane_ethanol.yaml  fane_naphthalene.yaml  fane_salicylic_acid.yaml  md17_paracetamol.yaml  nbody_gravity.yaml
configs/model/: dit.yaml  dit_ff.yaml  mlp.yaml  so3dit_ff.yaml
configs/sim_env/: nve_mf.yaml  nve_so3ff.yaml  nvt_mf.yaml  nvt_so3ff.yaml
examples/: harmonic_oscillator.ipynb  harmonic_oscillator_standalone.ipynb  harmonic_oscillator_standalone_pytorch.ipynb
hfm/: app.py  jraph_utils.py  simbench.py  utils.py
hfm/backbones/: base.py  dit.py  embedding.py  mlp.py  mlp_scalar.py  so3dit.py  utils.py
hfm/datasets/: fane_datamodule.py  hfm_dataset.py  in_memory_data_module.py  in_memory_dataset.py  numpy_datamodule.py  tfds_data_module.py  tfds_dataset.py  utils.py
hfm/potentials/: mueller_brown.py  n_body_gravity.py  neural_force_field.py  so3lr_potential.py  toy_potentials.py
hfm/simulation/: base.py  csvr_integrator.py  integration_filters.py  langevin_integrator.py  mean_flow_integrator.py  metrics.py  nose_hoover_integrator.py  nve_integrator.py  potential.py  utils.py
hfm/training/: checkpoint.py  ema_tracker.py  trainer.py
tests/: test_base_simulation.py  test_filters.py  test_jraph_ops.py  test_nve_integrators.py  test_nvt_simulation.py  test_simbench_metrics.py  test_spectra.py
tests/test_utils/: ff.py
